Using FontAwesome 6.7.2. Fixed statistics.html component to be responsive. Some components looking better, have consisten styling, no bg-white background color that gets screwed up from the dark-mode toggle. Additionally added avatar to the menubar.

--- a/app/assets/src/styles.css
+++ b/app/assets/src/styles.css
@@ -1,11 +1,10 @@
 @import "tailwindcss";
 /* @config './tailwind.config.js */
 
-/*
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-*/
 
 
 /*
@@ -77,16 +76,20 @@ Components:
 
 */
 @plugin "daisyui" {
-  themes: nord --default, abyss, cupcake, dracula, corporate --prefersdark;
-  root: ":root";
-  include: ; 
-  exclude: ;
-  prefix: ;
-  logs: true;
+    themes: nord --default, abyss, cupcake, dracula, corporate --prefersdark;
+    root: ":root";
+    include: ; 
+    exclude: ;
+    prefix: ;
+    logs: true;
 }
 
 /* Or just plain CSS if not using Tailwind */
 body {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 
+
+.w-14 {
+    width: calc(var(--spacing) * 14);
+}
