--- a/app/templates/components/collapse.html
+++ b/app/templates/components/collapse.html
@@ -1,15 +1,21 @@
-<div tabindex="0" class="collapse collapse-arrow bg-base-100 border-base-300 border">
-  <div class="collapse-title font-semibold">This collapse component only opens</div>
-  <div class="collapse-content text-sm">
-    Click the "Sign Up" button in the top right corner and follow the registration process.
-  </div>
-</div>
+
+<div class="container mx-auto px-4 py-8 flex justify-center">
+  <div class="p-6 rounded-lg shadow-md mx-auto">
+    <div tabindex="0" class="collapse collapse-arrow bg-base-100 border-base-300 border">
+      <div class="collapse-title font-semibold">How do I sign up? (this only opens)</div>
+      <div class="collapse-content text-sm">
+        Click the "Sign Up" button in the top right corner and follow the registration process.
+      </div>
+    </div>
+    
 
 
-<div class="collapse bg-base-100 border-base-300 border">
-  <input type="checkbox" />
-  <div class="collapse-title font-semibold">This collapse opens and closes</div>
-  <div class="collapse-content text-sm">
-    Click the "Sign Up" button in the top right corner and follow the registration process.
+    <div class="collapse collapse-arrow bg-base-100 border-base-300 border">
+      <input type="checkbox" />
+      <div class="collapse-title font-semibold">How do I sign up? opens and closes</div>
+      <div class="collapse-content text-sm">
+        Click the "Sign Up" button in the top right corner and follow the registration process.
+      </div>
+    </div>
   </div>
 </div>
