--- a/app/templates/includes/head.html
+++ b/app/templates/includes/head.html
@@ -8,18 +8,19 @@
   <meta name="viewport" content="width=device-width, user-scalable=no initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="/assets/img/favicons/favicon.ico">
 
-  <title>{% block title %}My Site{% endblock %}</title>
+  <title>{% block title %}My Site metaTitle{% endblock %}</title>
 
   <!-- ======================== -->
   <!--        STYLESHEETS       -->
   <!-- ======================== -->
   <link href="/assets/css/styles.css" rel="stylesheet">  <!-- All components in one -->
-
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
   <!-- ======================== -->
   <!--     JAVASCRIPTS          -->
   <!-- ======================== -->
   <!--       Alpine.js  https://github.com/alpinejs/alpine  -->
   <script src="https://cdn.jsdelivr.net/npm/kutty@latest/dist/alpinejs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
   <!--        Kutty - Reusable Tailwind3+ CSS components    -->
   <!--        https://github.com/praveenjuge/kutty/         -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/kutty@latest/dist/kutty.min.js"></script>  -->
