--- a/app/templates/includes/menu.html
+++ b/app/templates/includes/menu.html
@@ -47,5 +47,12 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"></path> </svg>
       </button>
     </div>
+    <div class="flex px-4 px-4">
+      <div class="avatar">
+        <div class="w-14 rounded-xl">
+          <img src="https://img.daisyui.com/images/profile/demo/yellingwoman@192.webp" />
+        </div>
+      </div>
+    </div>
   </div>
 </div>
